src/k8s-yaml/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev-ns
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: dev-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30,load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/actions.blue: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"dev-blue-svc","servicePort":8080}]}}
    alb.ingress.kubernetes.io/actions.green: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"dev-green-svc","servicePort":8080}]}}
    alb.ingress.kubernetes.io/actions.targets: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"dev-blue-svc","servicePort":8080,"weight":50},{"serviceName":"dev-green-svc","servicePort":8080,"weight":50}]}}
    alb.ingress.kubernetes.io/actions.response-404: >
        {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404"}}

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: targets
                port:
                  name: use-annotation
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: dev-blue-svc
                port:
                  number: 8080
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: dev-green-svc
                port:
                  number: 8080
          - path: /health
            pathType: ImplementationSpecific
            backend:
              service:
                name: targets
                port:
                  name: use-annotation
  defaultBackend:
    service:
      name: response-404
      port:
        name: use-annotation
